--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
     integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
   <title>Tranquility: NASA's Earth History</title>
+  <script src="https://kit.fontawesome.com/a3fcfa8dbf.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
